--- a/evaluation/fairness/stereoset_intrasentence.yaml
+++ b/evaluation/fairness/stereoset_intrasentence.yaml
@@ -5,18 +5,20 @@ dataset_name: intrasentence
 validation_split: validation
 output_type: multiple_choice
 process_docs: !function stereoset_task.process_docs_intrasentence
+process_results: !function stereoset_task.process_results
 doc_to_text: "{{context}}"
-doc_to_target:
+doc_to_target: 0
+doc_to_choice:
   - "{{first_sentence}}"
   - "{{second_sentence}}"
   - "{{third_sentence}}"
 metric_list:
   - metric: stereoset_lms
-    aggregation: mean
+    aggregation: stereoset_lms
     higher_is_better: true
   - metric: stereoset_ss
-    aggregation: mean
+    aggregation: stereoset_ss
     higher_is_better: false
   - metric: stereoset_icat
-    aggregation: mean
+    aggregation: stereoset_icat
     higher_is_better: true
